ui/src/components/dashboard/Dashboard.module.css
.wrapper {
  padding: 90px 133px 50px 183px;
}

.top {
  width: 100%;
  display: flex;
  height: 58px;
  justify-content: space-between;
  align-items: center;
}

.top > h2 {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  font-size: 1.8rem;
  line-height: 47px;
}

.status {
  background-color: var(--color-nav);
  height: 38px;
  width: auto;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
  margin-left: 13px;
  padding: 3px;
}

.status p {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 800;
  font-size: 20px;
  line-height: 24px;
  text-align: center;
  margin: 0 5px;
  letter-spacing: 1px;
}

.circle {
  display: block;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  background: var(--color-status);
}

.circle-flicker {
  animation: flicker 1s ease-in-out infinite;
}

/* widgets */
.temp {
  height: 438px;
  border-radius: 10px;
  background-color: var(--color-widget);
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
}

.wind {
  height: 323px;
  border-radius: 10px;
  background-color: var(--color-widget);
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
}

.weather {
  height: 321px;
  border-radius: 10px;
  background-color: var(--color-widget);
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
}

.rain {
  height: 326px;
  border-radius: 10px;
  background-color: var(--color-widget);
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
}

.graph {
  height: 441px;
  border-radius: 10px;
  background-color: var(--color-widget);
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
}
/*  */

.back {
  border: 0;
  box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  position: fixed;
  bottom: 130px;
  right: 60px;
  border-radius: 50%;
  width: 56px;
  height: 56px;
  background-color: var(--color-red);
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 500ms ease;
}

.back:hover {
  transform: scale(1.04);
}

.back-icon {
  color: #ffffff;
}

@keyframes flicker {
  0% {
    opacity: 0.1;
  }
  40% {
    opacity: 1;
  }
  60% {
    opacity: 1;
  }
  100% {
    opacity: 0.1;
  }
}

